tests/my/bad/array004.lat
int main() {
  int a = "123"[0],
      b = 1[0],
      c = true[0];
  return 0;
}
